cmake_minimum_required(VERSION 3.25.2)
project(cPlusPlusThings)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
#set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")

add_executable(cPlusPlusThings  alogrithm/word_fre/word_count_frequency.hpp alogrithm/word_fre/test.cpp)
#file(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
#foreach(file ${files})
#    get_filename_component(name ${file} NAME)
#    add_executable(${name} ${file})
#    message(${name})
#    message(${file})
#endforeach()